--- a/app/views/admin/documents/show.html.haml
+++ b/app/views/admin/documents/show.html.haml
@@ -16,4 +16,4 @@
       - if @document.image?
         = image_tag(@document.url)
       - else
-        = raw pretty_file(@document)
+        = pretty_file(@document)
