--- a/app/views/invitations/edit.html.haml
+++ b/app/views/invitations/edit.html.haml
@@ -5,8 +5,9 @@
   
   - f.inputs do
     = f.input :invitation_token, :as => :hidden
-    = f.input :password
-    = f.input :password_confirmation
+    = f.input :password, :required => true
+    = f.input :password_confirmation, :required => true
     
   - f.buttons do
     = f.commit_button "Set my password"
+  .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
