--- a/app/views/passwords/new.html.haml
+++ b/app/views/passwords/new.html.haml
@@ -4,7 +4,8 @@
   = f.error_messages
   
   - f.inputs do
-    = f.input :email
+    = f.input :email, :required => true
     
   - f.buttons do
     = f.commit_button "Send me reset password instructions"
+  .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
