--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -458,6 +458,12 @@ table.program_day table {
   height:100%;
 }
 
+table.program_day th {
+  font-size:13px;
+  padding:5px;
+  text-align:left;
+}
+
 table.program_day tr .title {
   background:#2b2b2b;
   font-size:18px;
