--- a/app/views/programs/index.html.haml
+++ b/app/views/programs/index.html.haml
@@ -1,163 +1,92 @@
 - title "Program Overview & Documents"
-- content_for :class_content do
-  = "wide"
 
 .text
   %p= "This is the detailed schedule of the course program."
 
-%h5.title= "Day one" 
-%table.program_day
-  %tr
-    %th
-    %th= "Documents"
-  %tr
-    %td.period
-      %table
-        %tr
-          %td.time= "08:15"
-        %tr
-          %td.title= "Accueil"
-    %td.docs
-  %tr.alt
-    %td.period
-      %table
-        %tr
-          %td.time= "08:30"
-        %tr
-          %td.title= "Welcome"
-    %td.docs
-  %tr#module1
-    %td.period
-      %table
-        %tr
-          %td.time= "09:00"
-        %tr
-          %td.title= "Invention and Inventors"
-    %td.docs
-      %ul
-        = list_documents_for_module(1)
-  %tr.alt
-    %td.period
-      %table
-        %tr
-          %td.time= "10:30"
-        %tr
-          %td.title= "Pause"
-    %td.docs
-  %tr
-    %td.period
-      %table
-        %tr
-          %td.time= "11:00"
-        %tr
-          %td.title= "Intervenant"
-        %tr
-          %td.time= "12:00"
-    %td.docs
-  %tr.alt
-    %td.period
-      %table
-        %tr
-          %td.time= "12:05"
-        %tr
-          %td.title= "Lunch"
-    %td.docs
-  %tr#module2
-    %td.period
-      %table
-        %tr
-          %td.time= "13:30"
-        %tr
-          %td.title= "Identify the Potential"
-        %tr
-          %td.time= "15:00"
-        %tr
-          %td.title= "Pause"
-    %td.docs
-      %ul
-        = list_documents_for_module(2)
-  %tr.alt#module3
-    %td.period
-      %table
-        %tr
-          %td.time= "15:30"
-        %tr
-          %td.title= "Intellectual Property"
-        %tr
-          %td.time= "16:30"
-        %tr
-          %td.title= "Intervenant"
-        %tr
-          %td.time= "17:30"
-        %tr
-          %td.title= "Case study"
-    %td.docs
-      %ul
-        = list_documents_for_module(3)
-  %tr
-    %td.period
-      %table
-        %tr
-          %td.time= "18:00"
-        %tr
-          %td.title= "Apéro"
-    %td.docs
+.break
 
-%h5.title= "Day two"
-%table.program_day
-  %tr#module4
-    %td.period
-      %table
-        %tr
-          %td.time= "08:30"
-        %tr
-          %td.title= "Licensing"
-        %tr
-          %td.time= "10:00"
-        %tr
-          %td.title= "Pause"
-        %tr
-          %td.time= "10:30"
-        %tr
-          %td.title= "Licensing"
-        %tr
-          %td.time= "12:00"
-        %tr
-          %td.title= "Lunch"
-    %td.docs
-      %ul
-        = list_documents_for_module(4)
-  %tr.alt#module5
-    %td.period
-      %table
-        %tr
-          %td.time= "13:30"
-        %tr
-          %td.title= "Start-up?"
-        %tr
-          %td.time= "15:00"
-        %tr
-          %td.title= "Pause"
-    %td.docs
-      %ul
-        = list_documents_for_module(5)
-  %tr#module6
-    %td.period
-      %table
-        %tr
-          %td.time= "15:30"
-        %tr
-          %td.title= "Sales"
-    %td.docs
-      %ul
-        = list_documents_for_module(6)
-  %tr.alt
-    %td.period
-      %table
-        %tr
-          %td.time= "17:00"
-        %tr
-          %td.title= "Clôture"
-        %tr
-          %td.time= "17:30"
-    %td.docs
+%h5.title= "June 8, 2010"
+
+%ul.program
+  %li
+    %p.time= "08:15"
+    %h4="Registration"
+  %li
+    %p.time= "08:30"
+    %h4= "Introduction"
+  %li
+    %p.time= "09:00"
+    %h4.module= "1. Invention and Inventors"
+    %ul
+      = list_documents_for_module(1)
+  %li
+    %p.time= "10:30"
+    %h4= "Break"
+  %li
+    %p.time= "11:00"
+    %h4= "Speaker"
+  %li
+    %p.time= "12:00"
+    %h4= "Lunch"
+  %li.break
+  %li
+    %p.time= "13:30"
+    %h4.module= "2. Identify the Potential"
+    %ul
+      = list_documents_for_module(2)
+  %li
+    %p.time= "15:00"
+    %h4= "Break"
+  %li
+    %p.time= "15:30"
+    %h4.module= "3. Intellectual Property"
+    %ul
+      = list_documents_for_module(3)
+  %li
+    %p.time= "16:30"
+    %h4= "Speaker"
+  %li
+    %p.time= "17:30"
+    %h4= "Case study"
+  %li
+    %p.time= "18:00"
+    %h4= "Apéro"
+  %li.break
+
+%h5.title= "June 9, 2010"
+
+%ul.program
+  %li
+    %p.time= "08:30"
+    %h4.module= "4. Licensing"
+    %ul
+      = list_documents_for_module(4)
+  %li
+    %p.time= "10:00"
+    %h4= "Pause"
+  %li
+    %p.time= "10:30"
+    %h4= "Licensing"
+  %li
+    %p.time= "12:00"
+    %h4= "Lunch"
+  %li.break
+  %li
+    %p.time= "13:30"
+    %h4.module= "5. Start-up?"
+    %ul
+      = list_documents_for_module(5)
+  %li
+    %p.time= "15:00"
+    %h4= "Break"
+  %li
+    %p.time= "15:30"
+    %h4.module= "6. Sales"
+    %ul
+      = list_documents_for_module(6)
+  %li
+    %p.time= "17:00"
+    %h4= "Conclusion"
+  %li
+    %p.time= "17:30"
+    %h4= "End"
