--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -34,5 +34,5 @@
     = f.input :motivation, :as => :text, :label => "Could you describe what motivates you to participate to this course?", :required => true
     
   - f.buttons do
-    = submit_tag "Update", :confirm => "Are you sure to update #{full_name(@user)} informations?"
+    = submit_tag "Update student", :confirm => "Are you sure to update #{full_name(@user)} informations?"
   .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
