--- a/app/views/registrations/edit.html.haml
+++ b/app/views/registrations/edit.html.haml
@@ -1,15 +1,24 @@
 - title "Edit my information"
 
-- semantic_form_for [resource_name, resource], :url => registration_path(resource_name), :html => { :class => "main", :method => :put } do |f|
-  = f.error_messages
-  
-  - f.inputs do
-    - if resource_name == :teacher
+- if resource_name == :teacher
+  - semantic_form_for [resource_name, resource], :url => teacher_path(resource), :html => { :class => "main", :method => :put } do |f|
+    - f.inputs do
       = f.input :name
+      
+    - f.buttons do
+      = f.commit_button "Update my name"
+      
+%h4= "Email & password"
+- semantic_form_for [resource_name, resource], :url => registration_path(resource_name), :html => { :class => "main", :method => :put } do |f|
+  - f.inputs do
     = f.input :email, :required => true
     = f.input :password
-    = f.input :password_confirmation
-    = f.input :current_password, :required => true, :label => "Current password (we need it to confirm your changes)"
+    
+    - if resource.errors.on(:current_password) == 'blank'
+      - resource.errors.clear
+      - resource.errors.add(:current_password, "Can't be blank")
+    
+    = f.input :current_password, :required => true, :label => "Current password (we need it to confirm your changes)", :render_inline_errors => false
     
   - f.buttons do
     = f.commit_button "Update my information"
