Display "Will be published" when the document is not published yet in the show view

--- a/app/views/admin/documents/show.html.haml
+++ b/app/views/admin/documents/show.html.haml
@@ -9,7 +9,7 @@
   
   %p= raw "#{content_tag(:strong, 'Module ID')}: #{@document.module_id}"
   
-  %p= raw "#{content_tag(:strong, 'Published on')}: #{@document.published_at.strftime("%B %d, %Y %H:%M")}"
+  %p= raw "#{content_tag(:strong, "#{@document.published? ? 'P' : 'Will be p'}ublished on")}: #{@document.published_at.strftime("%B %d, %Y %H:%M")}"
   
   #document
     %p
