--- a/app/views/admin/teachers/_teacher.html.haml
+++ b/app/views/admin/teachers/_teacher.html.haml
@@ -2,7 +2,7 @@
   %td
     - if teacher.has_accepted_invitation?
       = link_to image_tag("/images/admin/selected.png", :alt => "selected"), admin_teacher_path(teacher)
-  %td= link_to teacher.name || "No name yet", admin_teacher_path(teacher)
+  %td= link_to((teacher.name.blank? ? "No name yet" : teacher.name), admin_teacher_path(teacher))
   %td= mail_to(teacher.email, nil, :encode => 'hex', :class => "link")
   %td= teacher.module_id
   %td= link_to("edit", edit_admin_teacher_path(teacher))
