--- a/app/views/programs/index.html.haml
+++ b/app/views/programs/index.html.haml
@@ -63,7 +63,7 @@
       = list_documents_for_module(4)
   %li
     %p.time= "10:00"
-    %h4= "Pause"
+    %h4= "Break"
   %li
     %p.time= "10:30"
     %h4= "Licensing"
