--- a/app/views/registrations/edit.html.haml
+++ b/app/views/registrations/edit.html.haml
@@ -10,8 +10,7 @@
       
 - semantic_form_for [resource_name, resource], :url => registration_path(resource_name), :html => { :class => "main", :method => :put } do |f|
   - f.inputs do
-    = f.input :email, :required => true
-    = f.input :password
+    = f.input :password, :label => "New password"
     
     - if resource.errors.on(:current_password) == 'blank'
       - resource.errors.clear
@@ -20,5 +19,5 @@
     = f.input :current_password, :required => true, :label => "Current password (we need it to confirm your changes)", :render_inline_errors => false
     
   - f.buttons do
-    = f.commit_button "Update my information"
+    = f.commit_button "Update my password"
   .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
