--- a/app/views/admin/documents/new.html.haml
+++ b/app/views/admin/documents/new.html.haml
@@ -1,6 +1,5 @@
-= title "New document", false
+= title "New document"
 
-.text
-  %h3= "Creating a new document"
+= page_title "Creating a new document"
   
 = render :partial => 'form'
