--- a/app/views/admin/teachers/index.html.haml
+++ b/app/views/admin/teachers/index.html.haml
@@ -3,5 +3,4 @@
 .text
   .actions_right= link_to "Invite a teacher", new_teacher_invitation_path
   
-  #teachers_table_wrap
-    = render 'teachers'
+  #teachers_table_wrap= render 'teachers'
