--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -1,4 +1,5 @@
-= title 'Modules', false
+= title 'Modules'
+
 .text
   %h3= "Program Overview"
   %p= "Here is an overview of the course program. Detailed schedule will be communicated on this site to confirmed registered students"
