--- a/app/views/programs/index.html.haml
+++ b/app/views/programs/index.html.haml
@@ -1,93 +1,13 @@
-= title "Program Overview & Documents"
+= title_and_page_title "Program Overview & Documents"
 
 .text
-  %p= "This is the detailed schedule of the course program."
-
-.break
-
-%h5.title= "June 8, 2010"
-
-%ul.program
-  %li
-    %p.time= "08:15"
-    %h4="Registration"
-  %li
-    %p.time= "08:30"
-    %h4= "Introduction"
-  %li
-    %p.time= "09:00"
-    %h4.module= "1. Invention and Inventors"
-    %ul
-      = list_documents_for_module(1)
-  %li
-    %p.time= "10:30"
-    %h4= "Break"
-  %li
-    %p.time= "11:00"
-    %h4= "Speaker"
-  %li
-    %p.time= "12:00"
-    %h4= "Lunch"
-  %li.break
-  %li
-    %p.time= "13:30"
-    %h4.module= "2. Identify the Potential"
-    %ul
-      = list_documents_for_module(2)
-  %li
-    %p.time= "15:00"
-    %h4= "Break"
-  %li
-    %p.time= "15:30"
-    %h4.module= "3. Intellectual Property"
-    %ul
-      = list_documents_for_module(3)
-  %li
-    %p.time= "16:30"
-    %h4= "Speaker"
-  %li
-    %p.time= "17:30"
-    %h4= "Case study"
-  %li
-    %p.time= "18:00"
-    %h4= "Apéro"
-  %li.break
-
-%h5.title= "June 9, 2010"
-
-%ul.program
-  %li
-    %p.time= "08:30"
-    %h4.module= "4. Licensing"
-    %ul
-      = list_documents_for_module(4)
-  %li
-    %p.time= "10:00"
-    %h4= "Break"
-  %li
-    %p.time= "10:30"
-    %h4= "Licensing"
-  %li
-    %p.time= "12:00"
-    %h4= "Lunch"
-  %li.break
-  %li
-    %p.time= "13:30"
-    %h4.module= "5. Start-up?"
-    %ul
-      = list_documents_for_module(5)
-  %li
-    %p.time= "15:00"
-    %h4= "Break"
-  %li
-    %p.time= "15:30"
-    %h4.module= "6. Sales"
-    %ul
-      = list_documents_for_module(6)
-  %li
-    %p.time= "17:00"
-    %h4= "Conclusion"
-  %li
-    %p.time= "17:30"
-    %h4= "End"
-  %li.break
+  -#%p= "This is the detailed schedule of the course program."
+  %ul.program
+    %li
+      %h4.module= "General information and documents"
+    %li
+      %ul
+        = list_documents_for_module(1)
+        
+#program_content
+  = render 'program_content'
