--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -4,10 +4,11 @@
   %h3= "Application form for mintt #{Time.now.year}"
   %p
     %strong= "June 8 and 9, October 6, 2010"
-  %p= "Thank you to fill out the following form precisely and clearly."
+  %p= "Please fill out the following form precisely and clearly."
+  
 #register
-  - semantic_form_for resource_name, resource, :url => registration_path(resource_name), :html => { :class => "main" } do |f|
-    - f.inputs do
+  = semantic_form_for resource_name, resource, :url => registration_path(resource_name), :html => { :class => "main" } do |f|
+    = f.inputs do
       = f.input :gender, :as => :radio, :collection => [["Mrs.", "female"], ["Mr.", "male"]], :required => true
       = f.input :first_name, :required => true
       = f.input :last_name, :required => true
@@ -29,6 +30,8 @@
         %p= "I hereby confirm that I will be available for mintt on June 8 and 9 and October 6, 2010, the whole day. I also confirm I have well taken note I will dedicate at least 30 hours during summer 2010 to work on an EPFL invention case study."
       = f.input :agreement, :as => :boolean, :label => "I agree", :required => true
       
-    - f.buttons do
+    = f.buttons do
       = f.commit_button "Apply"
-    .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
+    .required_mention
+      = content_tag(:abbr, '*', :title => 'required')
+      = "required"
