--- a/app/views/admin/messages/_message.html.haml
+++ b/app/views/admin/messages/_message.html.haml
@@ -13,4 +13,7 @@
     %span.date= sexy_date(message.created_at)
     %span.time= sexy_time(message.created_at)
   %td
-    = button_to("trash", trash_admin_message_path(message), :method => :put, :id => "trash_message_#{message.id}", :class => "button delete")
+    - if message.trashed?
+      = update_field_form(message, :trashed_at, nil, "untrash", {}, :id => "untrash_message_#{message.id}", :class => "button delete")
+    - else
+      = update_field_form(message, :trashed_at, Time.now, "trash", {}, :id => "trash_message_#{message.id}", :class => "button delete")
