--- a/app/views/admin/teachers/_teachers.html.haml
+++ b/app/views/admin/teachers/_teachers.html.haml
@@ -1,16 +1,18 @@
+= dynamic_page_title "Teachers: #{count_of_total_for(@teachers)}"
+
 %table
   %colgroup
     - 6.times do
       %col{ :class => cycle("even", "odd") }
   %tr
-    %th
-    %th= "Name"
-    %th= "Email"
-    %th= "Module"
+    %th= link_to "Registered", admin_teachers_path(sort_parameters('invitation_token')), :remote => true
+    %th= link_to "Name", admin_teachers_path(sort_parameters('name')), :remote => true
+    %th= link_to "Email", admin_teachers_path(sort_parameters('email')), :remote => true
+    %th= link_to "Module", admin_teachers_path(sort_parameters('module_id')), :remote => true
     %th
     %th
   = render @teachers
-    
+  
 - if params.key? :all
   .right_links= link_to "View with paginate", admin_teachers_path, :remote => true
 - elsif @teachers.total_entries > Teacher.per_page
