--- a/app/views/admin/teachers/edit.html.haml
+++ b/app/views/admin/teachers/edit.html.haml
@@ -1,11 +1,11 @@
-= title "Edit teacher: #{content_tag(:em, @teacher.name_or_email)}"
+= title_and_page_title "Edit teacher: #{content_tag(:em, @teacher.name_or_email)}"
 
-- semantic_form_for [:admin, @teacher], :html => { :class => "main" } do |f|
-  - f.inputs do
+= semantic_form_for [:admin, @teacher], :html => { :class => "main" } do |f|
+  = f.inputs do
     = f.input :name
     = f.input :email, :required => true
-    = f.input :module_id, :as => :select, :collection => ProgramModule.all, :selected => @teacher.module_id || 1
+    = f.input :module_id, :label => "Speaker in module", :as => :select, :collection => modules_for_select, :selected => @teacher.module_id || 0
     
-  - f.buttons do
+  = f.buttons do
     = f.commit_button "Update teacher"
   .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
