--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -9,4 +9,4 @@
   %td.datetime
     %span.date= sexy_date(user.confirmed_at)
   %td= link_to("edit", edit_admin_user_path(user))
-  %td= button_to("delete", admin_user_path(user), :confirm => "Are you sure?", :method => :delete, :class => "button delete")
+  %td= update_field_form(user, :trashed_at, Time.now, "delete", {}, :confirm => "Are you sure?", :class => "button delete" )
