--- a/app/views/layouts/_flash.html.haml
+++ b/app/views/layouts/_flash.html.haml
@@ -1,3 +1,2 @@
-- if flash
-  - flash.each do |key, value|
-    #flash{ :class => key }= raw value
+- if flash.present?
+  #flash{ :class => flash.first[0] }= flash.first[1]
