--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -15,7 +15,7 @@
       = javascript_include_tag 'curvycorners'
     = javascript_include_tag :defaults, 'admin'
   %body
-    = render 'layouts/flash', :object => flash
+    = render :partial => 'layouts/flash', :object => flash
     #global
       #header
         #halo
