--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,17 +5,17 @@
     
     %title= "mintt#{yield(:title)}"
     
-    %link{ :href => "/stylesheets/style.css", :type => "text/css", :media => "screen", :rel => "stylesheet" }
-    %script{ :type => "text/javascript", :src => "http#{request.ssl? ? 's' : ''}://use.typekit.com/qwi4bur.js" }
-    %script{ :type => "text/javascript" }= "try{Typekit.load();}catch(e){};"
+    = stylesheet_link_tag 'style'
+    
+    = javascript_include_tag "http#{ request.ssl? ? 's':'' }://use.typekit.com/qwi4bur.js"
+    = javascript_tag "try{Typekit.load();}catch(e){};"
     /[if gte IE 7]
       == <script type="text/javascript">var curvyCornersNoAutoScan = true;</script>
-      %script{ :src => "/javascripts/curvycorners.js", :type => "text/javascript" }
-    %script{ :src => "/javascripts/prototype.js", :type => "text/javascript" }
-    %script{ :src => "/javascripts/application.js", :type => "text/javascript" }
+      = javascript_include_tag 'curvycorners'
+    = javascript_include_tag :defaults
     
   %body
-    = render 'layouts/flash', :object => flash
+    = render :partial => 'layouts/flash', :object => flash
     = render 'layouts/user_header'
     #global
       = render 'layouts/header'
@@ -25,4 +25,4 @@
       = render 'layouts/sidebar' unless controller_name == "programs"
       = render 'layouts/footer'
       
-    - google_analytics
+    = google_analytics
