--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,15 +1,18 @@
-= title "Contact", false
+= title "Contact"
+
 .text
   %h3= "Contact page"
   %p= "If you have any question, please contact us through the following form:"
-#register
   
-  - semantic_form_for @message,  :html => { :class => "main" } do |f|
-    - f.inputs do
-      = f.input :sender_name, :label => "Name", :required => true
-      = f.input :sender_email, :label => "Email", :required => true
-      = f.input :content, :as => :text, :label => "Message", :required => true
+#register
+  = semantic_form_for @message, :html => { :class => "main" } do |f|
+    = f.inputs do
+      = f.input :sender_name, :label => "Name"
+      = f.input :sender_email, :label => "Email"
+      = f.input :content, :as => :text, :label => "Message"
       
-    - f.buttons do
+    = f.buttons do
       = f.commit_button "Send message"
-    .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
+    .required_mention
+      = content_tag(:abbr, '*', :title => 'required')
+      = "required"
