--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -484,6 +484,55 @@ ul.program ul li {
   background:url(/images/file.png) no-repeat 10px 8px;
 }
 
+#program_menu {
+/*  position:absolute;
+  top:25px;
+  right:0;
+*/  list-style-type:none;
+}
+
+#program_menu li {
+  float:left;
+  padding:0 0 0 20px;
+}
+
+#program_menu li a {
+  display:block;
+  padding:5px 10px;
+  height:18px;
+  background:#000;
+  font-size:17px;
+  font-weight:400;
+  color:#888;
+  text-shadow:none;
+  cursor:pointer;
+  -webkit-border-radius:13px;
+  -moz-border-radius:13px;
+}
+
+#program_menu li.active a, #program_menu li a:hover {
+  color:#fff;
+  text-shadow:none;
+}
+
+#program_menu li a:active {
+  background:#000;
+}
+
+#program_menu li.home a {
+  width:33px;
+  height:31px;
+  background:url(/images/home_icon.png);
+  padding:0;
+  margin-top:4px;
+  border:none;
+  -webkit-border-radius:0;
+  -moz-border-radius:0;
+  -webkit-box-shadow:none;
+}
+
+#program_menu li.home a span {display:none;}
+
 #footer {
   padding:30px 0;
   text-align:center;
@@ -499,7 +548,7 @@ ul.program ul li {
   border-bottom:1px solid #000;
 }
 
-#flash.notice, #flash.success {
+#flash.notice {
   background:#a5ce37;
   color:#304703;
 }
