--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -1,7 +1,7 @@
 = title 'Modules'
 
 .text
-  %h3= "Program Overview"
+  %h3= "Course Overview"
   %p= "Here is an overview of the course program. Detailed schedule will be communicated on this site to confirmed registered students"
   
 %ul#modules
