--- a/app/views/programs/_day_2.html.haml
+++ b/app/views/programs/_day_2.html.haml
@@ -1,38 +1,49 @@
-%h5.title= "June 9, 2010"
-
-%ul.program
-  %li
-    %p.time= "08:30"
-    %h4.module= "4. Licensing"
-    %ul
-      = list_documents_for_module(4)
-  %li
-    %p.time= "10:00"
-    %h4= "Break"
-  %li
-    %p.time= "10:30"
-    %h4= "Licensing"
-  %li
-    %p.time= "12:00"
-    %h4= "Lunch"
-  %li.break
-  %li
-    %p.time= "13:30"
-    %h4.module= "5. Start-up?"
-    %ul
-      = list_documents_for_module(5)
-  %li
-    %p.time= "15:00"
-    %h4= "Break"
-  %li
-    %p.time= "15:30"
-    %h4.module= "6. Sales"
-    %ul
-      = list_documents_for_module(6)
-  %li
-    %p.time= "17:00"
-    %h4= "Conclusion"
-  %li
-    %p.time= "17:30"
-    %h4= "End"
-  %li.break
+%table.program
+  %tr
+    %td.time= "08:30"
+    %td.description.module.start
+      %h3
+        %strong= "Module 4"
+        = "Licensing"
+      %ul.document_list
+        = list_documents_for_module(4)
+  %tr
+    %td.time= "10:00"
+    %td.description.module
+      %h4= "Break"
+  %tr
+    %td.time= "10:30"
+    %td.description.module.end
+      %h4= "Licensing"
+  %tr
+    %td.time= "12:00"
+    %td.description
+      %h4= "Lunch"
+  %tr
+    %td.time= "13:30"
+    %td.description.module.start.end
+      %h3
+        %strong= "Module 5"
+        = "Start-up?"
+      %ul.document_list
+        = list_documents_for_module(5)
+  %tr
+    %td.time= "15:00"
+    %td.description
+      %h4= "Break"
+  %tr
+    %td.time= "15:30"
+    %td.description.module.start.end
+      %h3
+        %strong= "Module 6"
+        = "Sales"
+      %ul.document_list
+        = list_documents_for_module(6)
+  %tr
+    %td.time= "17:00"
+    %td.description
+      %h4= "Conclusion"
+  %tr
+    %td.time= "17:30"
+    %td.description
+      %h4= "End"
