--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -9,7 +9,7 @@
       = link_to root_path do
         %span= "Home"
     - if user_signed_in? || teacher_signed_in?
-      %li{ :class => ('active' if controller_name == 'programs') }= link_to "Program", program_path
+      %li{ :class => ('active' if controller_name == 'programs') }= link_to "Schedule", program_path
     %li{ :class => ('active' if params[:id] == 'modules') }= link_to "Modules", page_path('modules')
     - if APPLICATIONS_OPEN && !user_signed_in? && !teacher_signed_in?
       %li{ :class => ('active' if controller_name == 'applications') }= link_to "Application", new_user_application_path
