--- a/app/views/programs/_day_3.html.haml
+++ b/app/views/programs/_day_3.html.haml
@@ -1,9 +1,20 @@
 %table.program
   %tr
     %td.time= "08:30"
-    %td.description.module.start.end
+    %td.description.module.start
       %h3
-        %strong= "Module 7"
-        = "Case Studies"
-      %ul.document_list
-        = list_documents_for_module(7)
+        %strong= "Group 1"
+        = "Case Study"
+      -#%ul.document_list
+      -#  = list_documents_for_module(7)
+  %tr
+    %td.time= "09:00"
+    %td.description.module.end
+      %h3
+        %strong= "Group 2"
+        = "Case Study"
+  %tr
+    %td.time= "10:00"
+    %td.description
+      %h4= "Break"
+        
